# tacs-eventos

./: .gitignore  Autenticacion.md  Dockerfile  README.md  application-docker.properties  docker-compose.yml  package-lock.json  package.json  pom.xml
.github/workflows/: CI.yml  rust.yml
backend/: .dockerignore  .env.example  Dockerfile  pom.xml
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  prettier.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  tipos.d.ts  tipos.ts  utils.d.ts  utils.ts
frontend/src/componentes/: Login.tsx  (+20 more)
telegram-bot/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
telegram-bot/src/: auth.rs  bot.rs  callback.rs  command.rs  controller.rs  dialogue.rs  error.rs  error_handling.rs  main.rs  reques_client.rs  request_client.rs  schemas.rs
telegram-bot/src/auth/: in_memory_auth.rs
telegram-bot/src/callback/: change_event_state.rs  event_callback.rs  inscription_callback.rs
telegram-bot/src/command/: create_event.rs  event.rs  inscription.rs  inscriptions.rs  my_events.rs  user.rs
telegram-bot/src/controller/: general_controller.rs  query_controller.rs
telegram-bot/src/dialogue/: error.rs  event_creation_dialogue.rs  register.rs  registration_dialogue.rs  user.rs
telegram-bot/src/error/: auth_error.rs  request_client_error.rs
telegram-bot/src/schemas/: event.rs  event_organizer_view.rs  evento.rs  inscription.rs  user.rs  waitlist_inscription.rs
(+220 files in other folders)
