[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
teloxide = { version = "0.17.0", features = ["macros"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
