[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
fancy-regex = "0.16.2"
lazy_static = "1.5.0"
rand = "0.9.2"
reqwest = "0.12.23"
serde = "1.0.225"
serde_json = "1.0.145"
teloxide = { version = "0.17.0", features = ["macros"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[profile.release]
# Make the binary lighter
strip = true
